--- a/frontend/Web.Ui/index.html
+++ b/frontend/Web.Ui/index.html
@@ -52,7 +52,7 @@
             <div class="kpi-box">
                 <div class="kpi-title">Баланс</div>
                 <div id="balanceVal" class="kpi-value">—</div>
-                <div class="kpi-sub">Руб.</div>
+                <div class="kpi-sub">Копеек руб.</div>
             </div>
         </div>
     </section>
